{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 392,
  "lineage": "f4935dc8-6076-4208-fb28-b08c93da5bef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-01f9dadc1b4664464",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "PostgreSQL from Bastion",
            "from_port": 5432,
            "id": "sgr-01f9dadc1b4664464",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d925bc2b220c1fab",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0ebc0614c08964e7b",
            "security_group_rule_id": "sgr-01f9dadc1b4664464",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-01f9dadc1b4664464",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.security.aws_security_group.bastion",
            "module.security.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-041f8e47be4feabad",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "PostgreSQL from EKS managed node group cluster security group.",
            "from_port": 5432,
            "id": "sgr-041f8e47be4feabad",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-082f36168136b96f0",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0ebc0614c08964e7b",
            "security_group_rule_id": "sgr-041f8e47be4feabad",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-041f8e47be4feabad",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_role.cluster",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.existing_network.data.aws_vpc.service",
            "module.security.aws_security_group.eks_node",
            "module.security.aws_security_group.rds",
            "module.service_nat_gateway.aws_eip.nat",
            "module.service_nat_gateway.aws_nat_gateway.this",
            "module.service_nat_gateway.aws_route.private_app_default_to_nat"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-087ce34a65d431c91",
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:instance/i-0d90f6b85d9c700ea",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ai-care-dev-bastion-ssm-profile",
            "id": "i-0d90f6b85d9c700ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ai-care-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c977615c91cae898"
              }
            ],
            "primary_network_interface_id": "eni-0c977615c91cae898",
            "private_dns": "ip-10-0-1-132.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.132",
            "public_dns": "ec2-43-200-7-184.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.7.184",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ai-care",
                  "Scope": "infra-only"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ai-care",
                  "Scope": "infra-only"
                },
                "throughput": 125,
                "volume_id": "vol-024cf122379ff00e2",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4f74a9b41db30cd",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-bastion",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-bastion",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d925bc2b220c1fab"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "i-0d90f6b85d9c700ea",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.bastion.aws_iam_instance_profile.bastion_ssm_profile",
            "module.bastion.aws_iam_role.bastion_ssm_role",
            "module.bastion.data.aws_ami.amazon_linux",
            "module.existing_network.data.aws_vpc.service",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.existing_network",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:internet-gateway/igw-02cc153ccd9981c3f",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0beaaf51840498bae"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0beaaf51840498bae"
                ]
              }
            ],
            "id": "igw-02cc153ccd9981c3f",
            "internet_gateway_id": "igw-02cc153ccd9981c3f",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "aws-igw"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.existing_network",
      "mode": "data",
      "type": "aws_route_table",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-0b57d3c7408c20c8d",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:route-table/rtb-0b57d3c7408c20c8d",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0ae6932cca6e3c742",
                "route_table_id": "rtb-0b57d3c7408c20c8d",
                "subnet_id": "subnet-0399d1d5dc9043b69"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0a5259e07121f1d44",
                "route_table_id": "rtb-0b57d3c7408c20c8d",
                "subnet_id": "subnet-05a7f50d03159ee6f"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0b57d3c7408c20c8d",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b57d3c7408c20c8d",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "172.16.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-074ff64b2979bc5d0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-027ddcafdf792348b",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "rt-private-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.existing_network",
      "mode": "data",
      "type": "aws_route_table",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.existing_network",
      "mode": "data",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-0cf3c0a0cb31950de",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:route-table/rtb-0cf3c0a0cb31950de",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-022df91b20686e3db",
                "route_table_id": "rtb-0cf3c0a0cb31950de",
                "subnet_id": "subnet-01048c2306043944b"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0fea69c0ce0e2c82b",
                "route_table_id": "rtb-0cf3c0a0cb31950de",
                "subnet_id": "subnet-0e4f74a9b41db30cd"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-0cf3c0a0cb31950de",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0cf3c0a0cb31950de",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02cc153ccd9981c3f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.existing_network",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0399d1d5dc9043b69",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:subnet/subnet-0399d1d5dc9043b69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "available_ip_address_count": 214,
            "cidr_block": "10.0.12.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0399d1d5dc9043b69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105959916837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "aws-private-app-2",
              "kubernetes.io/cluster/ai-care-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-05a7f50d03159ee6f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:subnet/subnet-05a7f50d03159ee6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 232,
            "cidr_block": "10.0.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a7f50d03159ee6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105959916837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "aws-private-app-1",
              "kubernetes.io/cluster/ai-care-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.existing_network",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0dc3cda5512b495ea",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:subnet/subnet-0dc3cda5512b495ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.21.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc3cda5512b495ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105959916837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "aws-private-db-1"
            },
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0f38008ce44c44a11",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:subnet/subnet-0f38008ce44c44a11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.22.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f38008ce44c44a11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105959916837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "aws-private-db-2"
            },
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.existing_network",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-01048c2306043944b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:subnet/subnet-01048c2306043944b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.2.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01048c2306043944b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105959916837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "aws-public-web-2",
              "kubernetes.io/cluster/ai-care-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0e4f74a9b41db30cd",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:subnet/subnet-0e4f74a9b41db30cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 248,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4f74a9b41db30cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105959916837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "aws-public-web-1",
              "kubernetes.io/cluster/ai-care-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.existing_network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:vpc/vpc-0beaaf51840498bae",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0706370d5ee346ef2",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-093be3511663466ea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0beaaf51840498bae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08043b53d6e2d7d8a",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "aws-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.onprem_compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "strongswan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef07abf0a72a5575",
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:elastic-ip/eipalloc-0ef07abf0a72a5575",
            "association_id": "eipassoc-0c996b34a5d767b22",
            "domain": "vpc",
            "id": "eipalloc-0ef07abf0a72a5575",
            "instance": "i-004787b3aa2563b80",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0346f2dde6737f803",
            "private_dns": "ip-172-16-1-10.ap-northeast-2.compute.internal",
            "private_ip": "172.16.1.10",
            "public_dns": "ec2-3-35-38-30.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.38.30",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-strongswan-eip",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-strongswan-eip",
              "Project": "ai-care",
              "Scope": "infra-only"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "eipalloc-0ef07abf0a72a5575",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.onprem_compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fastapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09a72717a566d88fa",
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:instance/i-0ca54d1f9a65b8658",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ai-care-dev-onprem-ssm-profile",
            "id": "i-0ca54d1f9a65b8658",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03ac7f159a60a6dc1"
              }
            ],
            "primary_network_interface_id": "eni-03ac7f159a60a6dc1",
            "private_dns": "ip-172-16-10-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.10",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:105959916837:key/4824ad2b-835d-4e6a-887c-088e03f60f1c",
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ai-care",
                  "Scope": "infra-only"
                },
                "throughput": 0,
                "volume_id": "vol-0c93f0cb9cdd1747b",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0652c89ea58554194",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-fastapi-placeholder",
              "Project": "ai-care",
              "Role": "fastapi-placeholder",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-fastapi-placeholder",
              "Project": "ai-care",
              "Role": "fastapi-placeholder",
              "Scope": "infra-only"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c5e51e00e250d37"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "i-0ca54d1f9a65b8658",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.onprem_compute.aws_iam_instance_profile.onprem_ssm_profile",
            "module.onprem_compute.aws_iam_role.onprem_ssm_role",
            "module.onprem_compute.data.aws_ami.ubuntu_2204",
            "module.onprem_network.data.aws_subnet.private",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.fastapi"
          ]
        }
      ]
    },
    {
      "module": "module.onprem_compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "onprem_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09a72717a566d88fa",
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:instance/i-05f3b262a432e6540",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ai-care-dev-onprem-ssm-profile",
            "id": "i-05f3b262a432e6540",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0dfae994d0c913b25"
              }
            ],
            "primary_network_interface_id": "eni-0dfae994d0c913b25",
            "private_dns": "ip-172-16-10-20.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.20",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:105959916837:key/4824ad2b-835d-4e6a-887c-088e03f60f1c",
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ai-care",
                  "Scope": "infra-only"
                },
                "throughput": 0,
                "volume_id": "vol-06f1b07f9f8371b25",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0652c89ea58554194",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-postgres-placeholder",
              "Project": "ai-care",
              "Role": "postgres-placeholder",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-postgres-placeholder",
              "Project": "ai-care",
              "Role": "postgres-placeholder",
              "Scope": "infra-only"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06dffb35d619a04b9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "i-05f3b262a432e6540",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.onprem_compute.aws_iam_instance_profile.onprem_ssm_profile",
            "module.onprem_compute.aws_iam_role.onprem_ssm_role",
            "module.onprem_compute.data.aws_ami.ubuntu_2204",
            "module.onprem_network.data.aws_subnet.private",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.onprem_postgres"
          ]
        }
      ]
    },
    {
      "module": "module.onprem_compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "strongswan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09a72717a566d88fa",
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:instance/i-0f38d5eb07e41d0e7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ai-care-dev-onprem-ssm-profile",
            "id": "i-0f38d5eb07e41d0e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-090e0bb74c9293374"
              }
            ],
            "primary_network_interface_id": "eni-090e0bb74c9293374",
            "private_dns": "ip-172-16-1-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.10",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:105959916837:key/4824ad2b-835d-4e6a-887c-088e03f60f1c",
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "ai-care",
                  "Scope": "infra-only"
                },
                "throughput": 0,
                "volume_id": "vol-0ed8d4e149163ce91",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04b1cf699c6c52520",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-strongswan",
              "Project": "ai-care",
              "Role": "strongswan",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-strongswan",
              "Project": "ai-care",
              "Role": "strongswan",
              "Scope": "infra-only"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0418b66bd790ba89d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "i-0f38d5eb07e41d0e7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.onprem_compute.aws_iam_instance_profile.onprem_ssm_profile",
            "module.onprem_compute.aws_iam_role.onprem_ssm_role",
            "module.onprem_compute.data.aws_ami.ubuntu_2204",
            "module.onprem_network.data.aws_subnet.public",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.strongswan"
          ]
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:internet-gateway/igw-0dd739ff460baa869",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0a53924e1ccaeb2e2"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0a53924e1ccaeb2e2"
                ]
              }
            ],
            "id": "igw-0dd739ff460baa869",
            "internet_gateway_id": "igw-0dd739ff460baa869",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "on-prem-igw"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "data",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:route-table/rtb-038788093fe3a6b25",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0775143b23119e7b1",
                "route_table_id": "rtb-038788093fe3a6b25",
                "subnet_id": "subnet-04b1cf699c6c52520"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-038788093fe3a6b25",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-038788093fe3a6b25",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-090e0bb74c9293374",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd739ff460baa869",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "rt-public-onprem"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "data",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:route-table/rtb-038788093fe3a6b25",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0775143b23119e7b1",
                "route_table_id": "rtb-038788093fe3a6b25",
                "subnet_id": "subnet-04b1cf699c6c52520"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-038788093fe3a6b25",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-038788093fe3a6b25",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-090e0bb74c9293374",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd739ff460baa869",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": null,
            "tags": {
              "Name": "rt-public-onprem"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:subnet/subnet-0652c89ea58554194",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 244,
            "cidr_block": "172.16.10.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0652c89ea58554194",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105959916837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "onprem-private"
            },
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:subnet/subnet-04b1cf699c6c52520",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 250,
            "cidr_block": "172.16.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b1cf699c6c52520",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105959916837",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "onprem-public"
            },
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "data",
      "type": "aws_vpc",
      "name": "onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:vpc/vpc-0a53924e1ccaeb2e2",
            "cidr_block": "172.16.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e73cac5e6440a1d8",
                "cidr_block": "172.16.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-093be3511663466ea",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a53924e1ccaeb2e2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b5779951f51a8eef",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "onprem-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:vpc-endpoint/vpce-0e4fbd73f78837c51",
            "dns_entry": [
              {
                "dns_name": "vpce-0e4fbd73f78837c51-5fp388gu.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e4fbd73f78837c51-5fp388gu-ap-northeast-2a.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ec2messages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0899652Y2HYJSKG6MYC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e4fbd73f78837c51",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06c957e471e47ab10"
            ],
            "owner_id": "105959916837",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08845649e1ae60d2c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ec2messages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.16.10.136",
                "subnet_id": "subnet-0652c89ea58554194"
              }
            ],
            "subnet_ids": [
              "subnet-0652c89ea58554194"
            ],
            "tags": {
              "Name": "ai-care-dev-onprem-ec2messages-endpoint"
            },
            "tags_all": {
              "Name": "ai-care-dev-onprem-ec2messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "vpce-0e4fbd73f78837c51",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:vpc-endpoint/vpce-0e172cc4c02a74c6b",
            "dns_entry": [
              {
                "dns_name": "vpce-0e172cc4c02a74c6b-1ibhef8o.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e172cc4c02a74c6b-1ibhef8o-ap-northeast-2a.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "api.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z05255201LFBCR8M7DWUD"
              },
              {
                "dns_name": "ecr.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z064852439T8FPYBQ6JJI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e172cc4c02a74c6b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-031dd6f602ae2e317"
            ],
            "owner_id": "105959916837",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08845649e1ae60d2c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.api",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.16.10.12",
                "subnet_id": "subnet-0652c89ea58554194"
              }
            ],
            "subnet_ids": [
              "subnet-0652c89ea58554194"
            ],
            "tags": {
              "Name": "ai-care-dev-onprem-ecr-api-endpoint"
            },
            "tags_all": {
              "Name": "ai-care-dev-onprem-ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "vpce-0e172cc4c02a74c6b",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:vpc-endpoint/vpce-0c06a43218c089d81",
            "dns_entry": [
              {
                "dns_name": "vpce-0c06a43218c089d81-81oamxlc.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0c06a43218c089d81-81oamxlc-ap-northeast-2a.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0642480JP21GYJT2C3R"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0642480JP21GYJT2C3R"
              },
              {
                "dns_name": "dkr-ecr.ap-northeast-2.on.aws",
                "hosted_zone_id": "Z0531154HHWYAOB72UMH"
              },
              {
                "dns_name": "*.dkr-ecr.ap-northeast-2.on.aws",
                "hosted_zone_id": "Z0531154HHWYAOB72UMH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c06a43218c089d81",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0f96d41991108ce93"
            ],
            "owner_id": "105959916837",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08845649e1ae60d2c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.dkr",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.16.10.32",
                "subnet_id": "subnet-0652c89ea58554194"
              }
            ],
            "subnet_ids": [
              "subnet-0652c89ea58554194"
            ],
            "tags": {
              "Name": "ai-care-dev-onprem-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Name": "ai-care-dev-onprem-ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "vpce-0c06a43218c089d81",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:vpc-endpoint/vpce-045255484daf7e422",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-045255484daf7e422",
            "ip_address_type": "ipv4",
            "owner_id": "105959916837",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ab132a7189f5a93a"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "service_region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "ai-care-dev-onprem-s3-endpoint"
            },
            "tags_all": {
              "Name": "ai-care-dev-onprem-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "vpce-045255484daf7e422",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:vpc-endpoint/vpce-09fd0a5741049b330",
            "dns_entry": [
              {
                "dns_name": "vpce-09fd0a5741049b330-ebp146v0.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-09fd0a5741049b330-ebp146v0-ap-northeast-2a.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssm.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z09004933OXV1OW6B7UZZ"
              },
              {
                "dns_name": "ssm.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z08939451AE83SW53GVYK"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09fd0a5741049b330",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d39f83ad7b19752c"
            ],
            "owner_id": "105959916837",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08845649e1ae60d2c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssm",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.16.10.132",
                "subnet_id": "subnet-0652c89ea58554194"
              }
            ],
            "subnet_ids": [
              "subnet-0652c89ea58554194"
            ],
            "tags": {
              "Name": "ai-care-dev-onprem-ssm-endpoint"
            },
            "tags_all": {
              "Name": "ai-care-dev-onprem-ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "vpce-09fd0a5741049b330",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.onprem_network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:vpc-endpoint/vpce-03fd9f276fac7744b",
            "dns_entry": [
              {
                "dns_name": "vpce-03fd9f276fac7744b-tqir8u2g.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-03fd9f276fac7744b-tqir8u2g-ap-northeast-2a.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z09044662ZU7DLENGBOPI"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z0913903C6K3XJQJ3SRT"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03fd9f276fac7744b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05bc9a4c9bb6ece29"
            ],
            "owner_id": "105959916837",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-northeast-2",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08845649e1ae60d2c"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssmmessages",
            "service_region": "ap-northeast-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.16.10.45",
                "subnet_id": "subnet-0652c89ea58554194"
              }
            ],
            "subnet_ids": [
              "subnet-0652c89ea58554194"
            ],
            "tags": {
              "Name": "ai-care-dev-onprem-ssmmessages-endpoint"
            },
            "tags_all": {
              "Name": "ai-care-dev-onprem-ssmmessages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "vpce-03fd9f276fac7744b",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group/sg-07312256c07790142",
            "description": "Future ALB security group. No ALB is created in infra-only.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07312256c07790142",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access to future ALB.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access to future ALB.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ai-care-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-alb-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-alb-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sg-07312256c07790142",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group/sg-0d925bc2b220c1fab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d925bc2b220c1fab",
            "ingress": [],
            "name": "ai-care-dev-bastion-sg20260605010248777400000001",
            "name_prefix": "ai-care-dev-bastion-sg",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-bastion-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-bastion-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sg-0d925bc2b220c1fab",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group/sg-035da829af5a6070a",
            "description": "EKS node security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035da829af5a6070a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend container traffic from future ALB.",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07312256c07790142"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Node-to-node traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ai-care-dev-eks-node-sg",
            "name_prefix": "",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-eks-node-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-eks-node-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sg-035da829af5a6070a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fastapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group/sg-05c5e51e00e250d37",
            "description": "On-Prem FastAPI placeholder security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c5e51e00e250d37",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "FastAPI placeholder from Service VPC.",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "ai-care-dev-onprem-fastapi-sg",
            "name_prefix": "",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-fastapi-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-fastapi-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sg-05c5e51e00e250d37",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.onprem_network.data.aws_vpc.onprem"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "onprem_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group/sg-06dffb35d619a04b9",
            "description": "On-Prem PostgreSQL placeholder security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06dffb35d619a04b9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "On-Prem PostgreSQL from FastAPI placeholder.",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c5e51e00e250d37"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ai-care-dev-onprem-postgres-sg",
            "name_prefix": "",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-postgres-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-onprem-postgres-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sg-06dffb35d619a04b9",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.onprem_network.data.aws_vpc.onprem"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group/sg-0ebc0614c08964e7b",
            "description": "RDS PostgreSQL security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ebc0614c08964e7b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Bastion",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d925bc2b220c1fab"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS managed node group cluster security group.",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-082f36168136b96f0"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EKS nodes.",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035da829af5a6070a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ai-care-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-rds-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-rds-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "timeouts": null,
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sg-0ebc0614c08964e7b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group/sg-08845649e1ae60d2c",
            "description": "endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08845649e1ae60d2c",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ssm-endpoint-sg",
            "name_prefix": "",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sg-08845649e1ae60d2c",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "strongswan",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group/sg-0418b66bd790ba89d",
            "description": "strongSwan VPN endpoint security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0418b66bd790ba89d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "IPsec IKE.",
                "from_port": 500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "IPsec NAT-T.",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              }
            ],
            "name": "ai-care-dev-strongswan-sg",
            "name_prefix": "",
            "owner_id": "105959916837",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-strongswan-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-strongswan-sg",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a53924e1ccaeb2e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sg-0418b66bd790ba89d",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.onprem_network.data.aws_vpc.onprem"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-0a2c6a96a876153fe",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic.",
            "from_port": null,
            "id": "sgr-0a2c6a96a876153fe",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-07312256c07790142",
            "security_group_rule_id": "sgr-0a2c6a96a876153fe",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-0a2c6a96a876153fe",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.eks_node",
            "module.security.aws_security_group.fastapi",
            "module.security.aws_security_group.onprem_postgres",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.strongswan"
          ]
        },
        {
          "index_key": "eks_node",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-00d71f80301cb9f47",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic.",
            "from_port": null,
            "id": "sgr-00d71f80301cb9f47",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-035da829af5a6070a",
            "security_group_rule_id": "sgr-00d71f80301cb9f47",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-00d71f80301cb9f47",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.eks_node",
            "module.security.aws_security_group.fastapi",
            "module.security.aws_security_group.onprem_postgres",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.strongswan"
          ]
        },
        {
          "index_key": "fastapi",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-0c4193e896879ce58",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic.",
            "from_port": null,
            "id": "sgr-0c4193e896879ce58",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-05c5e51e00e250d37",
            "security_group_rule_id": "sgr-0c4193e896879ce58",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-0c4193e896879ce58",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.eks_node",
            "module.security.aws_security_group.fastapi",
            "module.security.aws_security_group.onprem_postgres",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.strongswan"
          ]
        },
        {
          "index_key": "onprem_postgres",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-0a484270cec860b7f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic.",
            "from_port": null,
            "id": "sgr-0a484270cec860b7f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-06dffb35d619a04b9",
            "security_group_rule_id": "sgr-0a484270cec860b7f",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-0a484270cec860b7f",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.eks_node",
            "module.security.aws_security_group.fastapi",
            "module.security.aws_security_group.onprem_postgres",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.strongswan"
          ]
        },
        {
          "index_key": "rds",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-0c676a6233b154e84",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic.",
            "from_port": null,
            "id": "sgr-0c676a6233b154e84",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0ebc0614c08964e7b",
            "security_group_rule_id": "sgr-0c676a6233b154e84",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-0c676a6233b154e84",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.eks_node",
            "module.security.aws_security_group.fastapi",
            "module.security.aws_security_group.onprem_postgres",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.strongswan"
          ]
        },
        {
          "index_key": "strongswan",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-00cf86b6f63f180ad",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic.",
            "from_port": null,
            "id": "sgr-00cf86b6f63f180ad",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0418b66bd790ba89d",
            "security_group_rule_id": "sgr-00cf86b6f63f180ad",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-00cf86b6f63f180ad",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.eks_node",
            "module.security.aws_security_group.fastapi",
            "module.security.aws_security_group.onprem_postgres",
            "module.security.aws_security_group.rds",
            "module.security.aws_security_group.strongswan"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-07492933b900f753b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP access to future ALB.",
            "from_port": 80,
            "id": "sgr-07492933b900f753b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-07312256c07790142",
            "security_group_rule_id": "sgr-07492933b900f753b",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-07492933b900f753b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-01251324e5d5e8768",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS access to future ALB.",
            "from_port": 443,
            "id": "sgr-01251324e5d5e8768",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-07312256c07790142",
            "security_group_rule_id": "sgr-01251324e5d5e8768",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-01251324e5d5e8768",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.security.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "eks_node_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-05c4e095e38f64e86",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Backend container traffic from future ALB.",
            "from_port": 8080,
            "id": "sgr-05c4e095e38f64e86",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07312256c07790142",
            "region": "ap-northeast-2",
            "security_group_id": "sg-035da829af5a6070a",
            "security_group_rule_id": "sgr-05c4e095e38f64e86",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-05c4e095e38f64e86",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.eks_node"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "eks_node_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-0a05397666eb7c8c8",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Node-to-node traffic.",
            "from_port": null,
            "id": "sgr-0a05397666eb7c8c8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-035da829af5a6070a",
            "region": "ap-northeast-2",
            "security_group_id": "sg-035da829af5a6070a",
            "security_group_rule_id": "sgr-0a05397666eb7c8c8",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-0a05397666eb7c8c8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.security.aws_security_group.eks_node"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "fastapi_from_service_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-0651b6bd2be8d7426",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "FastAPI placeholder from Service VPC.",
            "from_port": 9000,
            "id": "sgr-0651b6bd2be8d7426",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-05c5e51e00e250d37",
            "security_group_rule_id": "sgr-0651b6bd2be8d7426",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": 9000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-0651b6bd2be8d7426",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.fastapi"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "onprem_postgres_from_fastapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-0b6dd7bb2614f0749",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "On-Prem PostgreSQL from FastAPI placeholder.",
            "from_port": 5432,
            "id": "sgr-0b6dd7bb2614f0749",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-05c5e51e00e250d37",
            "region": "ap-northeast-2",
            "security_group_id": "sg-06dffb35d619a04b9",
            "security_group_rule_id": "sgr-0b6dd7bb2614f0749",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-0b6dd7bb2614f0749",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.fastapi",
            "module.security.aws_security_group.onprem_postgres"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_eks_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-0468022ca930b94e6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "PostgreSQL from EKS nodes.",
            "from_port": 5432,
            "id": "sgr-0468022ca930b94e6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-035da829af5a6070a",
            "region": "ap-northeast-2",
            "security_group_id": "sg-0ebc0614c08964e7b",
            "security_group_rule_id": "sgr-0468022ca930b94e6",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": 5432
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-0468022ca930b94e6",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.security.aws_security_group.eks_node",
            "module.security.aws_security_group.rds"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "strongswan_udp_4500",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-0fb51345c3ad23851",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "IPsec NAT-T.",
            "from_port": 4500,
            "id": "sgr-0fb51345c3ad23851",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0418b66bd790ba89d",
            "security_group_rule_id": "sgr-0fb51345c3ad23851",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": 4500
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-0fb51345c3ad23851",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.strongswan"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "strongswan_udp_500",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:security-group-rule/sgr-0c912c05b6783ee2b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "IPsec IKE.",
            "from_port": 500,
            "id": "sgr-0c912c05b6783ee2b",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0418b66bd790ba89d",
            "security_group_rule_id": "sgr-0c912c05b6783ee2b",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "to_port": 500
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "sgr-0c912c05b6783ee2b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.strongswan"
          ]
        }
      ]
    },
    {
      "module": "module.service_nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5682897766d85ca",
            "arn": "arn:aws:ec2:ap-northeast-2:105959916837:elastic-ip/eipalloc-0a5682897766d85ca",
            "association_id": "eipassoc-0968e78a7453e834a",
            "domain": "vpc",
            "id": "eipalloc-0a5682897766d85ca",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-014c49cca17998568",
            "private_dns": "ip-10-0-1-248.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.248",
            "public_dns": "ec2-43-203-15-228.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.15.228",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-service-nat-eip",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-service-nat-eip",
              "Project": "ai-care",
              "Scope": "infra-only"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "eipalloc-0a5682897766d85ca",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "module": "module.service_nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5682897766d85ca",
            "association_id": "eipassoc-0968e78a7453e834a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-027ddcafdf792348b",
            "network_interface_id": "eni-014c49cca17998568",
            "private_ip": "10.0.1.248",
            "public_ip": "43.203.15.228",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e4f74a9b41db30cd",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-service-nat",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "ai-care-dev-service-nat",
              "Project": "ai-care",
              "Scope": "infra-only"
            },
            "vpc_id": "vpc-0beaaf51840498bae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "id": "nat-027ddcafdf792348b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "module.service_nat_gateway.aws_eip.nat"
          ]
        }
      ]
    },
    {
      "module": "module.service_nat_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_app_default_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-0b57d3c7408c20c8d",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b57d3c7408c20c8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-027ddcafdf792348b",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b57d3c7408c20c8d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b57d3c7408c20c8d"
          },
          "dependencies": [
            "module.service_nat_gateway.aws_eip.nat",
            "module.service_nat_gateway.aws_nat_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "aws_route",
      "name": "onprem_to_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-038788093fe3a6b25179966490",
            "instance_id": "i-0f38d5eb07e41d0e7",
            "instance_owner_id": "105959916837",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-090e0bb74c9293374",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-038788093fe3a6b25",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-038788093fe3a6b25"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.onprem_compute.aws_iam_instance_profile.onprem_ssm_profile",
            "module.onprem_compute.aws_iam_role.onprem_ssm_role",
            "module.onprem_compute.aws_instance.strongswan",
            "module.onprem_compute.data.aws_ami.ubuntu_2204",
            "module.onprem_network.data.aws_route_table.private",
            "module.onprem_network.data.aws_subnet.public",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.security.aws_security_group.strongswan"
          ]
        }
      ]
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "aws_route",
      "name": "service_private_app_to_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-0b57d3c7408c20c8d",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-074ff64b2979bc5d0",
            "id": "r-rtb-0b57d3c7408c20c8d3246677288",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b57d3c7408c20c8d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "105959916837",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b57d3c7408c20c8d"
          },
          "dependencies": [
            "module.existing_network.data.aws_vpc.service",
            "module.onprem_network.data.aws_vpc.onprem",
            "module.vpn.aws_vpn_gateway.this"
          ]
        }
      ]
    }
  ]
}